# interop-cpp-netcore

./: README.md
Hello-world-netcore/: Hello-world-netcore.sln
Hello-world-netcore/Hello-world-netcore/: Hello-world-netcore.csproj  Program.cs
hello-world-cpp/: CMakeLists.txt
hello-world-cpp/include/: Interop.h
hello-world-cpp/src/: CMakeLists.txt  Interop.cpp
